# the_resistance

./: .env.example  .gitignore  AI Resistance PRD.md  CLAUDE.md  README.md  pyproject.toml
resistance_ui/: resistance-event-schema.md  resistance-replayer.html
src/resistance/: __init__.py  beliefs.py  bidding.py  cli.py  engine.py  eventlog.py  events.py  hydrate.py  personality.py  replay.py  rules.py  state.py  views.py  webserver.py
src/resistance/agents/: base.py  llm_agent.py  prompts.py  scripted.py
src/resistance/llm/: base.py  claude.py  factory.py  models.py  ollama.py
tests/: conftest.py  test_bidding.py  test_engine.py  test_hydrate.py  test_llm_agent.py  test_lobby.py  test_models.py  test_ollama.py  test_prompts.py  test_renderer.py  test_replay.py  test_rules.py  test_schema.py  test_views.py  test_webplay.py  test_webserver.py
