[project]
name = "resistance"
version = "0.1.0"
description = "AI-driven digital version of The Resistance: one human vs LLM agents that bluff, deceive, and deduce."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.92",
    "pydantic>=2.7",
]

[project.scripts]
resistance = "resistance.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resistance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
